--- a/feedback/templates/feedback/feedback.html
+++ b/feedback/templates/feedback/feedback.html
@@ -6,19 +6,9 @@
 </head>
 <body>
     <h2>Оставьте отзыв</h2>
-    <form action="">
-        <label for="name_id">Имя:</label>
-        <input type="text" id="name_id" name="name">
-        <br>
-        <br>
-        <label for="surname_id">Фамилия:</label>
-        <input type="text" id="surname_id" name="surname">
-        <br>
-        <br>
-        <label for="feedback_id">Отзыв:</label>
-        <textarea name="feedback" id="feedback_id" cols="30" rows="5"></textarea>
-        <br>
-        <br>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form }}
         <button type="submit">Отправить</button>
     </form>
 </body>
