add validations for form

--- a/feedback/templates/feedback/feedback.html
+++ b/feedback/templates/feedback/feedback.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>Оставьте отзыв</h2>
-    <form action="" method="post">
+    <form action="/" method="post">
         {% csrf_token %}
         {{ form }}
         <button type="submit">Отправить</button>
