--- a/feedback/templates/feedback/done.html
+++ b/feedback/templates/feedback/done.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h2>Ваш запрос обработан</h2>
-</body>
-</html>
+{% extends 'feedback/base.html' %}
+{% block title %}  {% endblock %}
+
+{% block content %}
+    <h2>Ваш запрос обработан</h2>
+{% endblock %}
