add ListFeedBack and DetailFeedBack based on TemplateView

--- a/feedback/templates/feedback/done.html
+++ b/feedback/templates/feedback/done.html
@@ -1,6 +1,8 @@
 {% extends 'feedback/base.html' %}
-{% block title %}  {% endblock %}
+{% block title %}Отзыв готов{% endblock %}
 
 {% block content %}
     <h2>Ваш запрос обработан</h2>
+    <h2>Имя - {{ name }}</h2>
+    <h2>Дата - {{ date }}</h2>
 {% endblock %}
